(fix/InputView) 입력을 위한 출력메시지 관련 코드 오류 수정