@@ -1,8 +1,8 @@
 package menu;
 
 import camp.nextstep.edu.missionutils.Console;
+import java.util.Collections;
 import java.util.List;
-import java.util.Scanner;
 
 public class InputView {
 
@@ -11,9 +11,13 @@ public class InputView {
         return List.of(getString().split(MessageFormat.INPUT_PARSER.getMessage()));
     }
 
-    public List<String> getCannotEatMenuNames() {
-        System.out.println(MessageFormat.CANNOT_EAT_MENU_COMMENT_FORMAT.getMessage());
-        return List.of(getString().split(MessageFormat.INPUT_PARSER.getMessage()));
+    public List<String> getCannotEatMenuNames(String couchName) {
+        try {
+            System.out.println(String.format(MessageFormat.CANNOT_EAT_MENU_COMMENT_FORMAT.getMessage(), couchName));
+            return List.of(getString().split(MessageFormat.INPUT_PARSER.getMessage()));
+        } catch (NullPointerException e) {
+            return Collections.emptyList();
+        }
     }
 
     public String getString() {
